--- a/src/app/_layout/no-auth/no-auth.component.html
+++ b/src/app/_layout/no-auth/no-auth.component.html
@@ -8,6 +8,9 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/login']">Login</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" [routerLink]="['/benifits']">Benifits</a>
         </li>
         <li class="nav-item">
