spelling mistake update from benifits to benefits

--- a/src/app/_layout/no-auth/no-auth.component.html
+++ b/src/app/_layout/no-auth/no-auth.component.html
@@ -7,7 +7,7 @@
         <a class="nav-link" [routerLink]="['/login']">Login</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" [routerLink]="['/benifits']">Benifits</a>
+        <a class="nav-link" [routerLink]="['/benefits']">Benefits</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" [routerLink]="['/terms']">Terms</a>
