--- a/src/app/_layout/base/base.component.html
+++ b/src/app/_layout/base/base.component.html
@@ -4,7 +4,7 @@
 
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" [routerLink]="['/benifits']">Benifits</a>
+        <a class="nav-link" [routerLink]="['/benefits']">benefits</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" [routerLink]="['/terms']">Terms</a>
